--- a/gettingstarted/index.html
+++ b/gettingstarted/index.html
@@ -16,8 +16,8 @@
     </code></pre>
     <h2>Clone Project</h2>
     <pre><code>
-        git clone git@github.com:knoldus/lagom-java-crud.git
-        cd lagom-java-crud
+        git clone git@github.com:vimalmishrra/lagom-java-mbank-master.git
+        cd lagom-java-mbank
         mvn lagom:runAll
     </code>
 	<h2>Testing the project</h2>
